# agent-memory

./: .dockerignore  .env.example  .env.predeploy.example  .env.production.example  .env.release.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.predeploy.yaml  compose.production.yaml  compose.release.yaml  compose.yaml  pyproject.toml
config/: phase-c-gold-drafts.json
docs/: ADR-001-第二技术Spike结论.md  ADR-002-阶段C社区算法结论.md  CODEX-CANARY-REMEDIATION.md  V1.0-Hermes与API契约设计.md  V1.0-Hermes历史对话导入设计.md  V1.0-Hermes集成测试与用户验收方案.md  V1.0-Vault安全设计.md  V1.0-rc8生产边界验证报告.md  V1.0-release验收矩阵.md  V1.0-上线前Review报告.md  V1.0-后续阶段开发计划.md  V1.0-开发部署与运维手册.md  V1.0-总体架构设计.md  V1.0-数据模型设计.md  V1.0-星图概念与投影设计.md  V1.0-正式迁移与灰度发布方案.md  V1.0-测试Release说明.md  V1.0-生产候选接入与原地晋级手册.md  V1.0-生产来源治理与部署冻结设计.md  V1.0-生产预部署接入试运行手册.md  V1.0-真实关系边质量与候选社区报告.md  V1.0-运行与配置设计.md  V1.0-阶段A实施验证报告.md  V1.0-阶段B实施验证报告.md  V1.0-阶段C人工金标社区草案.md  V1.0-阶段C前置候选覆盖摘要.md  V1.0-阶段C历史备份候选覆盖摘要-补充批次.md  V1.0-阶段C历史备份候选覆盖摘要.md  V1.0-阶段C实施计划.md  V1.0-阶段C实施验证报告.md  V1.0-阶段C数据选择与候选审计.md  V1.0-阶段C社区算法评测报告.md  V1.0-项目需求文档.md  handoff.md  技术选型方案-V1.0.md  跨主机开发与交接标准.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
migrations/: env.py
scripts/: backup.sh  handoff-check.sh  hermes-plugin.py  init-local.sh  init-predeploy-env.sh  init-production-env.sh  init-release-env.sh  package-release.sh  predeploy-backup.sh  predeploy-env.sh  predeploy-hermes-env.sh  predeploy-preflight.sh  predeploy-source-inventory.sh  predeploy-stop.sh  predeploy-up.sh  predeploy-verify.sh  predeploy_host_check.py  production-backup.sh  production-canary-readiness.sh  production-configure-model.sh  production-hermes-env.sh  production-preflight.sh  production-promote.sh  production-source-inventory.sh  production-source-policy.sh  production-stop.sh  production-up.sh  production-verify.sh  production_control.py  release-check.sh  release-preflight.sh  verify-hermes-uat.sh  verify-isolated-regression.sh  verify-restore.sh  verify-worker-outage.sh  verify-worker-recovery.sh
tests/: production_runtime_helpers.py  test_atomic_worker.py  test_candidate_review.py  test_classification.py  test_classification_memory_content.py  test_community_evaluation.py  test_community_report.py  test_embeddings.py  test_evaluation_plan.py  test_evaluation_report.py  test_gold_review.py  test_graph_visibility.py  test_hermes_backup.py  test_hermes_client.py  test_hermes_import.py  test_hermes_installer.py  test_interaction_state.py  test_model_adapter.py  test_model_policy.py  test_predeploy_host_check.py  test_predeploy_init.py  test_predeploy_preflight.py  test_production_backup_contract.py  test_production_canary_verification.py  test_production_control.py  test_production_model_config.py  test_production_promotion.py  test_recall_dedup.py  test_redaction.py  test_release_init.py  test_release_preflight.py  test_repository_redaction.py  test_reviewed_relations.py  test_sanitize.py  test_schemas.py  test_script_python_entrypoints.py  test_subjects.py  test_ui_auth.py  (+3 more)
(+81 files in other folders)
