[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "agent-memory"
version = "1.0.0rc6"
description = "Evidence-first local memory service for Hermes Agent"
requires-python = ">=3.12"
dependencies = [
  "cryptography>=44,<50",
  "fastapi>=0.115,<1",
  "litellm>=1.70,<2",
  "psycopg[binary,pool]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "tenacity>=9,<10",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.11,<1",
]
migrations = [
  "alembic>=1.14,<2",
  "sqlalchemy>=2.0,<3",
]

[project.scripts]
agent-memory-api = "agent_memory.api:main"
agent-memory-worker = "agent_memory.worker:main"
agent-memory-verify-vault = "agent_memory.vault_verify:main"
agent-memory-import-hermes = "agent_memory.hermes_import:main"
agent-memory-select-hermes = "agent_memory.hermes_selection:main"
agent-memory-verify-atomic = "agent_memory.atomic_selftest:main"
agent-memory-sanitize-derived = "agent_memory.sanitize:main"
agent-memory-verify-sanitizer = "agent_memory.sanitize_selftest:main"
agent-memory-plan-evaluation = "agent_memory.evaluation_plan:main"
agent-memory-evaluation-report = "agent_memory.evaluation_report:main"
agent-memory-apply-model-policy = "agent_memory.model_policy:main"
agent-memory-community-report = "agent_memory.community_report:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_memory"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = ["integration: requires the project Docker Compose stack"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["spikes"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
